[package]
name = "layer_to_np2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
console = "0.15.8"
fxhash = "0.2.1"
indicatif = "0.17.8"
itertools = "0.13.0"
num_cpus = "1.16.0"
petgraph = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.9.0"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.3"
toml = "0.8.2"
uuid = { version = "1.6.1", features = ["serde", "v7"] }
